[gd_scene load_steps=12 format=3 uid="uid://dq0wpoywm1r6o"]

[ext_resource type="Script" uid="uid://phj4j4mi5ipa" path="res://scripts/ui/ui.gd" id="1_x4jx1"]
[ext_resource type="Script" uid="uid://b12rg5o8m1w70" path="res://scenes/Ui/Components/animated_label.gd" id="2_yev5y"]
[ext_resource type="AudioStream" uid="uid://c0x8ah6rx8vi0" path="res://assets/sounds/click4.ogg" id="3_aujml"]
[ext_resource type="AudioStream" uid="uid://co0p77vnxhvp3" path="res://assets/sounds/chalk-on-blackboard.mp3" id="4_tsrkt"]

[sub_resource type="LabelSettings" id="LabelSettings_ja3lj"]
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_aujml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopRightContainer/ImpieLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ja3lj"]
resource_name = "annouce_round"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopRightContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.433333, 1.86667, 2.5),
"transitions": PackedFloat32Array(1, 1, 1.74111, 1.36605, 1),
"update": 0,
"values": [Vector2(398, 0), Vector2(398, -400), Vector2(104, 168), Vector2(104, 168), Vector2(398, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopRightContainer/ImpieLabel:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.3, 0.468664, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.0, 0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopRightContainer/ImpieLabel:theme_override_font_sizes/font_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.386648, 0.466667, 1.87667, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 0.757858, 1),
"update": 0,
"values": [32, 32, 64, 64, 32]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.333333, 2.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_update_ungodly"
}, {
"args": [],
"method": &"_round_announcement_finished"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TopRightContainer:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(242, 59)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TopRightContainer/ImpieLabel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ChalkSoundPlayer:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.480502, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tsrkt"]
_data = {
&"RESET": SubResource("Animation_aujml"),
&"annouce_round": SubResource("Animation_ja3lj")
}

[sub_resource type="Animation" id="Animation_rjvug"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 420)]
}

[sub_resource type="Animation" id="Animation_tsrkt"]
resource_name = "shake"
length = 0.15
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomContainer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 420), Vector2(0, 422), Vector2(0, 418)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_03p2l"]
_data = {
&"RESET": SubResource("Animation_rjvug"),
&"shake": SubResource("Animation_tsrkt")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_x4jx1")

[node name="BottomContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(320, 30)
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="TimerPb" type="ProgressBar" parent="BottomContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0
value = 100.0
rounded = true
show_percentage = false

[node name="TimerLabel" type="Label" parent="BottomContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "7 s"
label_settings = SubResource("LabelSettings_ja3lj")
horizontal_alignment = 1

[node name="TopLeftContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScoreLabel" type="Label" parent="TopLeftContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"
script = ExtResource("2_yev5y")
metadata/_custom_type_script = "uid://b12rg5o8m1w70"

[node name="TopRightContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -245.594
offset_top = -393.056
offset_right = -3.59399
offset_bottom = -334.056
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ImpieLabel" type="Label" parent="TopRightContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "erase the 7"
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tsrkt")
}

[node name="TimerAP" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_03p2l")
}

[node name="ClickSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_aujml")
volume_db = -16.94
pitch_scale = 2.7
bus = &"SFX"

[node name="ChalkSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tsrkt")
volume_db = 4.435
pitch_scale = 1.31
bus = &"SFX"
